NIFI-12061: address review comments